--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -26,7 +26,7 @@ The service account is defined as the tuple of storage dictionary $\sa¬storage$
   \end{aligned}\,}
 \end{align}
 
-Thus, the balance of the service of index $s$ would be denoted $\accounts\subb{s}_\sa¬balance$ and the storage item of key $\mathbf{k} \in \blob$ for that service is written $\accounts\subb{s}_\sa¬storage[\mathbf{k}]$.
+Thus, the balance of the service of index $s$ would be denoted $\accounts\subb{s}_\sa¬balance$ and the storage item of key $\mathbf{k} \in \blob$ for that service is written $\accounts\subb{s}_\sa¬storage\subb{\mathbf{k}}$.
 
 
 
