--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -140,7 +140,7 @@ The assurances extrinsic is a sequence of \emph{assurance} values, at most one p
 The assurances must all be anchored on the parent and ordered by validator index:
 \begin{align}
   \forall a &\in \xtassurances : a_\xa¬anchor = \H_\¬parent \\
-  \forall i &\in \set{ 1 \dots \len{\xtassurances} } : \xtassurances\subb{i - 1}_\xa¬assurer < \xtassurances[i]_\xa¬assurer
+  \forall i &\in \set{ 1 \dots \len{\xtassurances} } : \xtassurances\subb{i - 1}_\xa¬assurer < \xtassurances\subb{i}_\xa¬assurer
 \end{align}
 
 The signature must be one whose public key is that of the validator assuring and whose message is the serialization of the parent hash $\H_\¬parent$ and the aforementioned bitstring:
