--- a/text/erasure_coding.tex
+++ b/text/erasure_coding.tex
@@ -40,15 +40,18 @@ The original data may be reconstructed with any 342 of the 1,023 resultant items
     \protoset{\tuple{\bloboflen{2k}, \Nmax{1023}}}_{342} &\to \bloboflen{684k} \\
     \mathbf{c} &\mapsto \begin{cases}
       \encode{\sq{\build{\mathbf{x}}{\tup{\mathbf{x}, i} \orderedin \sqorderby{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}}}} &\when \set{\build{i}{\tup{\mathbf{x}, i} \in \mathbf{c}}} = \Nmax{342}\\
-      \join(\join^\#({}^\text{T}[
-        \ecrecover{}{\set{\build{
-          (\spl{2}(\mathbf{x})\sub{p}, i)
+      \join(\join^\#({}^\text{T}\sq{
+        \build{
+          \ecrecover{}{\set{\build{
+           (\spl{2}(\mathbf{x})\sub{p}, i)
+          }{
+            \tup{\mathbf{x}, i} \in \mathbf{c}
+          }}}
         }{
-          \tup{\mathbf{x}, i} \in \mathbf{c}
-        }}}
-      \mid p \in \Nmax{k}])) &\text{always}\\
+          p \in \Nmax{k}
+        }
+      })) &\text{always}\\
     \end{cases}
-%      [ \ecrecover{\mathbf{y}, i} \mid \mathbf{y} \orderedin \transpose\sq{\build{\spl{2}(\mathbf{x})}{\tup{\mathbf{x}, i} \orderedin \mathbf{c}}} ]
   }
 \end{equation}
 
@@ -65,7 +68,7 @@ x^{16} + x^5 + x^3 + x^2 + 1
 
 Hence:
 \begin{equation}
-\mathbb{F}_{16} \equiv \frac{\mathbb{F}_2[x]}{x^{16}} + x^5 + x^3 + x^2 + 1
+\mathbb{F}_{16} \equiv \frac{\mathbb{F}_2\subb{x}}{x^{16}} + x^5 + x^3 + x^2 + 1
 \end{equation}
 
 We name the generator of $\frac{\mathbb{F}_{16}}{\mathbb{F}_2}$, the root of the above polynomial, $\authpool$ as such: $\mathbb{F}_{16} = \mathbb{F}_2(\authpool)$.
