--- a/text/overview.tex
+++ b/text/overview.tex
@@ -182,8 +182,8 @@ The \textsc{pvm} is a very simple \textsc{risc} \emph{register machine} and as s
 
 The \textsc{pvm} assumes a simple pageable \textsc{ram} of 32-bit addressable octets situated in pages of $\mathsf{Z}_P = 4096$ octets where each page may be either immutable, mutable or inaccessible. The \textsc{ram} definition $\ram$ includes two components: a value $\ram¬value$ and access $\ram¬access$. If the component is unspecified while being subscripted then the value component may be assumed. Within the context of the virtual machine, $\memory \in \ram$ is typically used to denote \textsc{ram}.
 \begin{align}
-  \readable{\memory} &\equiv \set{i \mid \memory_\ram¬access[\floor{\nicefrac{i}{\mathsf{Z}_P}}] \ne \none } \\
-  \writable{\memory} &\equiv \set{i \mid \memory_\ram¬access[\floor{\nicefrac{i}{\mathsf{Z}_P}}] = \text{W} }
+  \readable{\memory} &\equiv \set{\build{i}{\memory_\ram¬access\subb{\floor{\nicefrac{i}{\mathsf{Z}_P}}} \ne \none}} \\
+  \writable{\memory} &\equiv \set{\build{i}{\memory_\ram¬access\subb{\floor{\nicefrac{i}{\mathsf{Z}_P}}} = \text{W} }}
 \end{align}
 
 We define two sets of indices for the \textsc{ram} $\memory$: $\readable{\memory}$ is the set of indices which may be read from; and $\writable{\memory}$ is the set of indices which may be written to.
